welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: not found: value getdirection
				if ( getdirection() == Direction.EAST) { 
                                     ^SnakeBuggle:13: error: not found: value getdirection
				if ( getdirection() == Direction.WEST) { 
                                     ^SnakeBuggle:25: error: not found: value getdirection
			  if  ( getdirection() == Direction.EAST ) {
                                ^