welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {

	def finale() {                                            // fonction test final

			var f = 0
				
				if ( getdirection() == Direction.EAST) { 
					gauche() ; 
					if (estFaceMur() == true) f=1 
				}
		
				if ( getdirection() == Direction.WEST) { 
							droite() ; 
							if (estFaceMur() == true) f=1 
				}
		
				if ( f == 1 && estFaceMur() == true ) return true
				else return false
		}

      def avanceSerp() {                                       // avancer comme un serpent

			  if (!estFaceMur) {avance()}
			  if  ( getdirection() == Direction.EAST ) {
			  		gauche() ; avance(); gauche();
			  	}
			  			  
			  else {droite() ; avance(); droite() }
      }


baisseBrosse()
while (finale() == false) {
	avanceSerp()
}
}